--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+
+.btnContainer{
+  display:flex;
+  gap:15px;
+  padding: 0 20px !important;
+}
+.btn2{
+  width: 350px;
+  background-color: #38B0DE !important;
+}
+.btn1{
+  width: 200px;
+  border-color: #38B0DE !important;
+  color:#38B0DE !important;
+}
+.editBtn{
+  color:#38B0DE !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+ @media(max-width: 998px){
+  .btnContainer{
+    flex-direction:column;
+    gap:10px
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .btn1{
+    width:100% !important;
   }
-  to {
-    transform: rotate(360deg);
+  .btn2{
+    width: 100%;
   }
+  h3{
+    font-size: 20px !important
+  }
+  .resultBtn{
+    margin: 0px 10px !important;
+  }
+
 }
